// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "black",
        "borderStyle": "dashed",
        "borderWidth": 5,
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
          "padding": 5,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "height": 10,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Quest
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Lock
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Unlock
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Travel Here
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressBar (with one player) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "black",
        "borderStyle": "dashed",
        "borderWidth": 5,
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
          "padding": 5,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#00ff00",
                "borderColor": "#00ff00",
                "borderRadius": 0,
                "borderWidth": 0.5,
                "flex": 1,
                "flexDirection": "column",
                "height": 100,
                "margin": 5,
                "marginBottom": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "backgroundColor": "black",
                    "borderColor": "black",
                    "borderRadius": 0,
                    "borderWidth": 1,
                    "flex": 1,
                    "height": 21,
                    "margin": 2,
                    "marginBottom": 1,
                    "resizeMode": "contain",
                    "width": 10,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "black",
                    "flex": 9,
                    "fontFamily": "telegrama_raw",
                    "paddingRight": 30,
                    "paddingTop": 4,
                    "textAlign": "center",
                  }
                }
              >
                foo
              </Text>
            </View>
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "black",
                  "borderRadius": 0,
                  "borderWidth": 0.5,
                  "flex": 3,
                  "flexDirection": "column",
                  "margin": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "red",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "green",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "blue",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "purple",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "brown",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "black",
                        "borderColor": "yellow",
                        "borderWidth": 1,
                        "height": 9,
                        "margin": 4,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 9,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "height": 10,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Quest
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Lock
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Unlock
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "margin": 7,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "backgroundColor": "black",
              "borderColor": "#00ff00",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "width": "100%",
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#00ff00",
              "fontFamily": "telegrama_raw",
              "fontSize": 20,
              "paddingTop": 9,
              "textAlign": "center",
            }
          }
        >
          Travel Here
        </Text>
      </View>
    </View>
  </View>
</View>
`;
